--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,8 +1,115 @@
-$light-color: #f4f4f4;
-$font-stack:arial, helvetica, sans-serif;
+@import "config";
 
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    // margin: 0;
+    // padding: 0;
 }
+
+// generic styles for the page
+
+body{
+    padding: 0;
+    margin: 0;
+    font-family: $font-standard;
+    background-color:purple;
+    color: white;
+    font-size: 1rem;
+}
+
+h1,
+h2,
+h3 {
+    margin: 0;
+}
+
+a {
+    color: $color-5;
+}
+
+a:hover {
+    color: $color-3;
+    text-decoration: none;
+}
+
+li{
+    list-style-type: none;
+}
+
+// navbar
+
+nav{
+
+    font-family: $font-special;
+    // font-size: 80%;
+    padding: 4rem 1rem;
+
+    h1{
+        font-family: $font-standard;
+    }
+    
+    ul{
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        // gör så att texten wrappar
+        flex-flow: row wrap;
+    }
+
+    li:first-child{
+        // flex basis gör att innehållet tar upp en hel rad och flyttar ner nästa rad.
+        flex-basis: 100%;
+        text-align: center;
+    }
+
+    a{
+        text-decoration: none;
+        // display: block;
+    }
+
+    
+}
+
+// header content
+#header-intro{
+    padding: 4rem 1rem 10rem 1rem;
+    padding-bottom: 10rem;
+    // centrerar text? men var centrerar texten? Förstår inte riktigt?
+    max-width: 1200px;
+    margin: 0 auto;
+
+    p{
+        font-size: 1rem;
+        line-height: 1.5;
+    }
+
+    .name{
+        font-family: $font-special;
+        font-size: 1rem;
+
+        span{
+            display: block;
+            font-size: 4rem;
+            // font-weight: 300;
+            color: $color-1;
+        }    
+    }
+
+    h2{
+        font-size: 4rem;
+    }
+
+        
+
+    
+}
+
+
+
+
+
+
+
