--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -77,6 +77,11 @@ nav{
         text-decoration: none;
         // display: block;
     }
+    // attribute-selector. Tar alla classname med fa- i sig och gör om.
+    [class*="fa-"] {
+        // 1.5 rem blir större eftersom texten är satt till 80% av rem i css. 
+        font-size: 150%; 
+    }
 
     
 }
@@ -192,6 +197,7 @@ footer{
         display: flex;
         justify-content: center;
         gap: 3rem;
+        font-size: 3rem;
         
         // gör så att texten wrappar
         flex-flow: row wrap;
@@ -208,6 +214,8 @@ footer{
     background: linear-gradient(90deg, rgba(250,232,77,1) 0%, rgba(67,248,145,1) 100%);
     height: 2px;
 }
+
+
 
 
 
