--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,5 +1,6 @@
 @import "config";
 @import "buttons";
+@import "icons";
 
 * {
     box-sizing: border-box;
@@ -77,12 +78,6 @@ nav{
         text-decoration: none;
         // display: block;
     }
-    // attribute-selector. Tar alla classname med fa- i sig och gör om.
-    [class*="fa-"] {
-        // 1.5 rem blir större eftersom texten är satt till 80% av rem i css. 
-        font-size: 150%; 
-    }
-
     
 }
 
