icons color and hover

--- a/SCSS/_icons.scss
+++ b/SCSS/_icons.scss
@@ -1,17 +1,31 @@
 // font-awesome icons
 
-nav {
-    // attribute-selector. Tar alla classname med fa- i sig och gör om.
-    [class*="fa-"] {
+// attribute-selector. Tar alla classname med fa- i sig och gör om.
+nav [class*="fa-"] {
         // 1.5 rem blir större eftersom texten är satt till 80% av rem i css. 
         font-size: 150%; 
-    }
 }
 
-footer {
 
-    [class*="fa-"] {
+nav h1 [class*="fa-"] {
+    color: $color-5;
+
+}
+
+nav h1 [class*="fa-"]:hover {
+    color:$color-3;
+}
+
+
+footer [class*="fa-"] {
         // 100% är samma som parent, dvs ul på 3rem 
-        font-size: 100%; 
-    }
+        font-size: 100%;
+        color: $color-3;
 }
+
+footer [class*="fa-"]:hover{
+    color: #67ef05;
+}
+
+
+
