--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     // margin: 0;
     // padding: 0;
+    
 }
 
 // generic styles for the page
@@ -27,7 +28,7 @@ h3 {
 }
 
 a {
-    color: $color-5;
+    color: white;
 }
 
 a:hover {
