--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,6 +1,8 @@
 @import "config";
 @import "buttons";
 @import "icons";
+@import "media";
+
 
 * {
     box-sizing: border-box;
@@ -209,6 +211,36 @@ footer{
 .gradient-line{
     background: linear-gradient(90deg, rgba(250,232,77,1) 0%, rgba(67,248,145,1) 100%);
     height: 2px;
+}
+
+
+
+
+// media querys. Kunde inte ha som egen media eftersom något måste blivit fel med ordningen?
+@media (min-width: 767px) {
+
+    #projects{
+        // gör så att texten lägger sig jämnt med ovan section. Dvs section efter navigation.
+        max-width: 1200px;
+        margin: 0 auto;
+
+        article{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 1rem;
+        }
+
+        .projects-text {
+
+            order: 2;
+            text-align: right;
+        }
+
+        ul{
+            justify-content: flex-end;
+        }
+    }
+    
 }
 
 
