--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -174,7 +174,8 @@ nav{
 
 #contact{
     // background-color: black;
-    width: 400px;
+    max-width: 400px;
+    // width: 400px;
     /* margin: 2rem 0; */
     text-align: center;
     margin: 0 auto;
