--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -243,7 +243,9 @@ footer{
         ul{
             justify-content: flex-end;
         }
+
     }
+
     
 }
 
@@ -255,8 +257,20 @@ footer{
         right: 125px;
         top: 16px;
         
-
     }
+
+    // .card, .front, .back {
+    //     width: 200px;
+    //     height: 200px;
+        
+    // }
+
+    // .back img{
+    //     width: 200px;
+    //     height: 200px;
+    // }
+
+
 
 }
 
