--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -247,6 +247,20 @@ footer{
     height: 2px;
 }
 
+// resume site
+
+.resume{
+    font-family: $font-standard;
+    padding: 4rem 1rem 10rem 1rem;
+    padding-bottom: 5rem;
+    max-width: 1200px;
+    margin: 0 auto;
+    
+    h2{
+        font-size: 4rem;
+    }
+}
+
 
 
 
