--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -47,6 +47,18 @@ img{
     width: 100%;
 }
 
+.sr-only{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
 
 // navbar
 
@@ -188,6 +200,10 @@ nav{
     .reverse img{
         order: 2;
     }
+}
+
+.projects-text a{
+    text-decoration: none;
 }
 
 .projects-text-box{
