--- a/SCSS/_flipping-card.scss
+++ b/SCSS/_flipping-card.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     padding-top: 4rem;
+    -webkit-perspective: 700px;
     
 
 
@@ -23,11 +24,14 @@
     margin: 20px;
     transition: all 0.6s ease;
     transform-style: preserve-3d;
+    -webkit-transition: -webkit-transform 0.6s ease;
+    -webkit-transform-style: preserve-3d;
 
 }
 
 .card:hover {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
     /* transform: rotateX(180deg); */
 }
 
@@ -41,12 +45,14 @@
     background: rgb(255,255,255);
     background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(250,232,77,1) 19%, rgba(67,248,145,1) 83%);
     border-radius: 100%;
+    -webkit-backface-visibility: hidden;
     
 
 }
 
 .back{
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
 }
 
 h1{
