--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,7 +49,8 @@ footer [class*=fa-]:hover {
   padding-top: 4rem;
   -webkit-perspective: 700px;
 }
-.flipping-card-container h1 {
+
+h1 {
   font-family: "Oxygen", sans-serif;
 }
 
